wip, overflow and button fixes on quick add

--- a/assets/et_contact-form.css
+++ b/assets/et_contact-form.css
@@ -52,8 +52,6 @@
   margin-top: 3rem;
 }
 .contact__button button {
-  background-color: black;
-  color: white;
   margin: auto;
 }
 .h0 {
