--- a/styles/sections/quick-add.css
+++ b/styles/sections/quick-add.css
@@ -148,25 +148,27 @@
     mx-auto
     mb-0
     bg-scheme-bg
-    <md:overflow-hidden
+    /* TODO: FIX THIS OVERFLOW  */
+    !overflow-auto
+    /* <md:overflow-hidden */
     max-w-full
     w-2/3;
 }
-
-/* ADDED FOR DEMO  */
 
 .quick-add-modal__content .grid {
   display: flex !important;
 }
 
-.quick-add-modal__content .product-form__submit {
-  background-color: black
-  color: white
+/* TODO: Update these button styles ??  */
+/* .quick-add-modal__content .product-form__submit {
+  background-color: black;
+  color: white;
   border: 3px solid black;
-}
+} */
 
 .quick-add-modal__content .shopify-payment-button {
-  border: 3px solid black;
+  @apply 
+    !h-12;
 }
 
 .quick-add-modal__content .caption-spaced {
